# chronoscheduler

./: .gitignore  LICENSE  README.md  README_ja.md  pyproject.toml
api/: main.py
api/templates/: index.html  layout.html  result.html
data/M/first/: course_lectures.json  rooms.csv  subject_propaties.json  subjects.csv  teacher_lectures.json
data/M/second/: course_lectures.json  periods.csv  subject_propaties.json  subjects.csv  teacher_lectures.json  teachers.csv
data/csv/first/: courses.csv  subject_propaties.json  teacher_lectures.json  teachers.csv
data/first/: course_lectures.json  rooms.csv  subject_propaties.json  subjects.csv  teacher_lectures.json  teachers.csv
data/first/constrains/: cp_map.json  pr_map.csv  pr_map.json  sp_map.json  (+4 more)
data/toy/: course_compulsoly_lectures.json  course_lectures.json  lecture_properties.csv  lecture_properties.json  periods.csv  rooms.csv  teacher_lectures.json
environments/: Dockerfile  create_env.sh  docker-compose.yaml
environments/scip_env/: Dockerfile  create_scip_env.sh  scip_test.py
notebooks/: check.ipynb  preprocessing.ipynb  result_check.ipynb
notebooks/kait/: eda.ipynb  preprocess_facility.ipynb  preprocessing.ipynb  result_check.ipynb
outputs/: result.txt
outputs/toy/: result.csv  result_cbc.csv  timetable.csv
src/: _class_patch.py  _excel_op.py  data_split.py  generate_mock_data.py  integer_programming.py  mock_data.py  preprocess.py  preprocessing.py  result2df.py  update_constraints.py
src/kait/: integer_programming.py  preprocessing.py
src/toy_problem/: mock_data.py  solver.py
(+67 files in other folders)
