[tool.poetry]
name = "chronoscheduler"
version = "0.1.0"
description = ""
authors = ["gengen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PuLP = "^2.7.0"
pandas = "^2.0.2"
numpy = "^1.24.3"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
fastapi = "^0.98.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
